2009-09-09  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/sec64k.exp: For frv-linux use "aw" sections.
	* ld-elf/seg.d: Cater for GNU_STACK segment.
	* ld-elf/symbol1ref.s: Use data section.
	* ld-elf/symbol2ref.s: Likewise.
	* ld-scripts/empty-address-1.d: Don't run on frv-linux.
	* ld-scripts/empty-address-2a.d: Likewise.
	* ld-scripts/empty-address-2b.d: Likewise.
	* ld-scripts/empty-aligned.d: Likewise.
	* ld-elf/extract-symbol-1sym.d: Tolerate extra target supplied syms.
	* ld-scripts/sort_b_a-1.d: Likewise.
	* ld-scripts/sort_b_a.d: Likewise.
	* ld-scripts/sort_b_a_a-1.d: Likewise.
	* ld-scripts/sort_b_a_a-2.d: Likewise.
	* ld-scripts/sort_b_a_a-3.d: Likewise.
	* ld-scripts/sort_b_a_n-1.d: Likewise.
	* ld-scripts/sort_b_a_n-2.d: Likewise.
	* ld-scripts/sort_b_a_n-3.d: Likewise.
	* ld-scripts/sort_b_n-1.d: Likewise.
	* ld-scripts/sort_b_n.d: Likewise.
	* ld-scripts/sort_b_n_a-1.d: Likewise.
	* ld-scripts/sort_b_n_a-2.d: Likewise.
	* ld-scripts/sort_b_n_a-3.d: Likewise.
	* ld-scripts/sort_b_n_n-1.d: Likewise.
	* ld-scripts/sort_b_n_n-2.d: Likewise.
	* ld-scripts/sort_b_n_n-3.d: Likewise.
	* ld-scripts/sort_no-1.d: Likewise.
	* ld-scripts/sort_no-2.d: Likewise.

2009-09-08  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/eh5.d: Don't run on hppa64.  Allow non-pcrel encoding.
	Skip extra CIEs emitted on embedded targets and adjust FDE
	matches to suit.

2009-09-05  Jie Zhang  <jie.zhang@analog.com>

	* ld-elf/sec64k.exp: Use ".set" instead of "=" for bfin-*-*.

2009-09-03  Dave Korn  <dave.korn.cygwin@gmail.com>

	* ld-pe/longsecn.d: Adjusted to match new .text section merging
	in default PE linker scripts.
	* ld-pe/longsecn-1.d: Likewise.
	* ld-pe/longsecn-2.d: Likewise.

2009-08-31  Jie Zhang  <jie.zhang@analog.com>

	* lib/ld-lib.exp (is_elf_format): Return 1 for bfin-*-uclinux.

2009-08-31  Alan Modra  <amodra@bigpond.net.au>

	* ld-ifunc/ifunc.exp: Match R_PPC64_JUMP_IREL.

2009-08-30  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/10569